chore: run tests on travis ci

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
 		"storybook": "start-storybook -p 6006 --quiet",
 		"test": "NODE_ENV=test jest",
 		"test:coverage": "NODE_ENV=test jest --coverage",
-		"test:watch": "NODE_ENV=test jest --watch"
+		"test:watch": "NODE_ENV=test jest --watch",
+		"lint-commit-message": "commitlint --edit"
 	},
 	"lint-staged": {
 		"*.{js,jsx,ts,tsx}": [
