--- a/package.json
+++ b/package.json
@@ -23,16 +23,16 @@
 	],
 	"scripts": {
 		"build": "NODE_ENV=production rollup -c",
-		"build:storybook": "build-storybook",
 		"changeset": "changeset",
 		"lint": "eslint . --ext .ts,.tsx,.js,.jsx",
 		"prepare": "husky install",
 		"release": "changeset publish",
-		"storybook": "start-storybook -p 6006 --quiet",
 		"test": "NODE_ENV=test jest",
 		"test:coverage": "NODE_ENV=test jest --coverage",
 		"test:watch": "NODE_ENV=test jest --watch",
-		"commitlint": "commitlint --edit"
+		"commitlint": "commitlint --edit",
+		"storybook": "storybook dev -p 6006",
+		"build-storybook": "storybook build"
 	},
 	"lint-staged": {
 		"*.{js,jsx,ts,tsx}": [
@@ -51,13 +51,15 @@
 		"not op_mini all"
 	],
 	"dependencies": {
-		"@babel/runtime": "^7.20.7"
+		"@babel/runtime": "^7.20.7",
+		"tsconfig-paths-webpack-plugin": "^4.0.1"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.20.12",
 		"@babel/plugin-transform-runtime": "^7.19.6",
-		"@babel/preset-env": "^7.20.2",
+		"@babel/preset-env": "^7.21.5",
 		"@babel/preset-react": "^7.18.6",
+		"@babel/preset-typescript": "^7.21.5",
 		"@changesets/cli": "^2.26.0",
 		"@commitlint/cli": "^17.4.1",
 		"@commitlint/config-conventional": "^17.4.0",
@@ -69,15 +71,13 @@
 		"@rollup/plugin-commonjs": "^24.0.0",
 		"@rollup/plugin-node-resolve": "^15.0.1",
 		"@rollup/plugin-terser": "^0.3.0",
-		"@storybook/addon-a11y": "^6.5.15",
-		"@storybook/addon-actions": "^6.5.15",
-		"@storybook/addon-essentials": "^6.5.15",
-		"@storybook/addon-interactions": "^6.5.15",
-		"@storybook/addon-links": "^6.5.15",
-		"@storybook/builder-webpack5": "^6.5.15",
-		"@storybook/manager-webpack5": "^6.5.15",
-		"@storybook/react": "^6.5.15",
-		"@storybook/testing-library": "^0.0.13",
+		"@storybook/addon-essentials": "^7.0.9",
+		"@storybook/addon-interactions": "^7.0.9",
+		"@storybook/addon-links": "^7.0.9",
+		"@storybook/blocks": "^7.0.9",
+		"@storybook/react": "^7.0.9",
+		"@storybook/react-webpack5": "^7.0.9",
+		"@storybook/testing-library": "^0.0.14-next.2",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^14.4.3",
@@ -98,6 +98,7 @@
 		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-react": "^7.32.0",
 		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-storybook": "^0.6.12",
 		"eslint-plugin-testing-library": "^5.9.1",
 		"husky": "^8.0.3",
 		"jest": "^29.3.1",
@@ -105,19 +106,19 @@
 		"jest-transform-stub": "^2.0.0",
 		"lint-staged": "^13.1.0",
 		"prettier": "^2.8.2",
+		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"rollup": "^2.79.1",
 		"rollup-plugin-delete": "^2.0.0",
 		"rollup-plugin-peer-deps-external": "^2.2.4",
 		"rollup-plugin-typescript2": "^0.34.1",
+		"storybook": "^7.0.9",
 		"ts-jest": "^29.0.4",
 		"tslib": "^2.4.1",
 		"ttypescript": "^1.5.15",
 		"typescript": "^4.9.4",
-		"typescript-transform-paths": "^3.4.6",
-		"webpack": "^5.75.0",
-		"webpack-cli": "^5.0.1"
+		"typescript-transform-paths": "^3.4.6"
 	},
 	"peerDependencies": {
 		"@emotion/react": "^11.0.0",
