--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@pkyad/uilib1",
-	"version": "1.6.0",
+	"version": "2.0.0",
 	"license": "MIT",
 	"publishConfig": {
 		"registry": "https://npm.pkg.github.com/pkyad"
@@ -24,6 +24,7 @@
 	"scripts": {
 		"build": "NODE_ENV=production rollup -c",
 		"changeset": "changeset",
+		"gen-changelog": "changeset version",
 		"lint": "eslint . --ext .ts,.tsx,.js,.jsx",
 		"prepare": "husky install",
 		"release": "changeset publish",
