--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,12 +1,11 @@
 {
 	"$schema": "https://unpkg.com/@changesets/config@2.1.0/schema.json",
 	"changelog": "@changesets/cli/changelog",
-	"commit": true,
+	"commit": false,
 	"fixed": [],
 	"linked": [],
 	"access": "public",
 	"baseBranch": "main",
 	"updateInternalDependencies": "patch",
-	"ignore": [],
-	"title": "..."
+	"ignore": []
 }
