feat: jest coverage report before release

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
 		"gen-changelog": "changeset version",
 		"lint": "eslint . --ext .ts,.tsx,.js,.jsx",
 		"prepare": "husky install",
-		"release": "yarn build;changeset publish",
+		"release": "yarn test:coverage;yarn build;changeset publish",
 		"test": "NODE_ENV=test jest",
 		"test:coverage": "NODE_ENV=test jest --coverage",
 		"test:watch": "NODE_ENV=test jest --watch",
