--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
 		"test:watch": "NODE_ENV=test jest --watch",
 		"commitlint": "commitlint --edit",
 		"storybook": "storybook dev -p 6006",
-		"build-storybook": "storybook build"
+		"build-storybook": "storybook build",
+		"script1": "tsx scripts/main.ts"
 	},
 	"lint-staged": {
 		"*.{js,jsx,ts,tsx}": [
@@ -67,6 +68,7 @@
 		"@emotion/babel-plugin": "^11.10.5",
 		"@emotion/react": "^11.11.0",
 		"@emotion/styled": "^11.11.0",
+		"@inquirer/prompts": "^1.0.3",
 		"@mdx-js/react": "^1.6.22",
 		"@rollup/plugin-babel": "^6.0.3",
 		"@rollup/plugin-commonjs": "^24.0.0",
@@ -117,6 +119,7 @@
 		"storybook": "^7.0.9",
 		"ts-jest": "^29.0.4",
 		"tslib": "^2.4.1",
+		"tsx": "^3.12.7",
 		"ttypescript": "^1.5.15",
 		"typescript": "^4.9.4",
 		"typescript-transform-paths": "^3.4.6"
