--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@pkyad/uilib1",
-	"version": "2.10.0",
+	"version": "2.11.0",
 	"license": "MIT",
 	"publishConfig": {
 		"registry": "https://npm.pkg.github.com/pkyad"
@@ -10,9 +10,7 @@
 		"type": "git",
 		"url": ""
 	},
-	"bin": {
-		"uiscript": "scripts/main.ts"
-	},
+	"bin": "scripts/main.ts",
 	"sideEffects": false,
 	"exports": {
 		"import": "./dist/esm/index.js",
@@ -122,7 +120,6 @@
 		"storybook": "^7.0.9",
 		"ts-jest": "^29.0.4",
 		"tslib": "^2.4.1",
-		"tsx": "^3.12.7",
 		"ttypescript": "^1.5.15",
 		"typescript": "^4.9.4",
 		"typescript-transform-paths": "^3.4.6"
@@ -131,7 +128,8 @@
 		"@emotion/react": "^11.11.0",
 		"@emotion/styled": "^11.11.0",
 		"react": "^16.8.0 || ^17 || ^18",
-		"react-dom": "^16.8.0 || ^17 || ^18"
+		"react-dom": "^16.8.0 || ^17 || ^18",
+		"tsx": "^3.12.7"
 	},
 	"engines": {
 		"node": ">=16"
