--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@pkyad/uilib1",
-	"version": "2.11.0",
+	"version": "2.12.0",
 	"license": "MIT",
 	"publishConfig": {
 		"registry": "https://npm.pkg.github.com/pkyad"
@@ -122,14 +122,14 @@
 		"tslib": "^2.4.1",
 		"ttypescript": "^1.5.15",
 		"typescript": "^4.9.4",
+		"tsx": "^3.12.7",
 		"typescript-transform-paths": "^3.4.6"
 	},
 	"peerDependencies": {
 		"@emotion/react": "^11.11.0",
 		"@emotion/styled": "^11.11.0",
 		"react": "^16.8.0 || ^17 || ^18",
-		"react-dom": "^16.8.0 || ^17 || ^18",
-		"tsx": "^3.12.7"
+		"react-dom": "^16.8.0 || ^17 || ^18"
 	},
 	"engines": {
 		"node": ">=16"
