--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
 	"editor.suggestSelection": "first",
 	"editor.formatOnSave": true,
 	"typescript.suggest.autoImports": true,
-	"typescript.tsdk": "node_modules/typescript/lib"
+	"typescript.tsdk": "node_modules/typescript/lib",
+	"liveServer.settings.port": 5502
 }
