--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
 		"jest-environment-jsdom": "^29.3.1",
 		"jest-transform-stub": "^2.0.0",
 		"lint-staged": "^13.1.0",
+		"postcss": "^8.4.23",
 		"prettier": "^2.8.2",
 		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
@@ -116,13 +117,14 @@
 		"rollup": "^2.79.1",
 		"rollup-plugin-delete": "^2.0.0",
 		"rollup-plugin-peer-deps-external": "^2.2.4",
+		"rollup-plugin-postcss": "^4.0.2",
 		"rollup-plugin-typescript2": "^0.34.1",
 		"storybook": "^7.0.9",
 		"ts-jest": "^29.0.4",
 		"tslib": "^2.4.1",
+		"tsx": "^3.12.7",
 		"ttypescript": "^1.5.15",
 		"typescript": "^4.9.4",
-		"tsx": "^3.12.7",
 		"typescript-transform-paths": "^3.4.6"
 	},
 	"peerDependencies": {
