--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,6 @@
 		"declaration": true,
 		"isolatedModules": true
 	},
-	"include": ["src/**/*"],
+	"include": ["src/**/*", "declarations.d.ts"],
 	"exclude": ["node_modules"]
 }
