--- a/.babelrc.json
+++ b/.babelrc.json
@@ -12,5 +12,5 @@
 		"@babel/preset-typescript",
 		"@babel/preset-react"
 	],
-	"plugins": ["@emotion", "@babel/plugin-transform-runtime"]
+	"plugins": ["@babel/plugin-transform-runtime"]
 }
