--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@pkyad/uilib1",
-	"version": "4.2.0",
+	"version": "5.0.0",
 	"license": "MIT",
 	"publishConfig": {
 		"registry": "https://npm.pkg.github.com/pkyad"
@@ -35,6 +35,7 @@
 		"commitlint": "commitlint --edit",
 		"storybook": "storybook dev -p 6006",
 		"build-storybook": "storybook build",
+		"gen-icons": "rimraf src/icons && npx @svgr/cli -d src/icons src/svgs --icon --typescript --ref --jsx-runtime 'automatic'",
 		"script1": "tsx scripts/main.ts"
 	},
 	"lint-staged": {
@@ -80,6 +81,7 @@
 		"@storybook/react": "^7.0.9",
 		"@storybook/react-webpack5": "^7.0.9",
 		"@storybook/testing-library": "^0.0.14-next.2",
+		"@svgr/cli": "^8.0.1",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^14.4.3",
