--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@pkyad/uilib1",
-	"version": "5.0.0",
+	"version": "5.1.0",
 	"license": "MIT",
 	"publishConfig": {
 		"registry": "https://npm.pkg.github.com/pkyad"
@@ -35,7 +35,7 @@
 		"commitlint": "commitlint --edit",
 		"storybook": "storybook dev -p 6006",
 		"build-storybook": "storybook build",
-		"gen-icons": "rimraf src/icons && npx @svgr/cli -d src/icons src/svgs --icon --typescript --ref --jsx-runtime 'automatic'",
+		"gen-icons": "rimraf src/icons && npx @svgr/cli -d src/icons src/svgs --icon --typescript --jsx-runtime 'automatic' --template src/svgs/template.ts",
 		"script1": "tsx scripts/main.ts"
 	},
 	"lint-staged": {
@@ -90,7 +90,6 @@
 		"@types/node": "^18.11.18",
 		"@types/react": "^18.0.26",
 		"@types/react-dom": "^18.0.10",
-		"@types/styled-components": "^5.1.26",
 		"@types/testing-library__jest-dom": "^5.14.5",
 		"@typescript-eslint/eslint-plugin": "^5.48.1",
 		"@typescript-eslint/parser": "^5.48.1",
