feat: icons storybook , and added few test icons

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,5 +25,5 @@
 		"isolatedModules": true
 	},
 	"include": ["src/**/*", "declarations.d.ts"],
-	"exclude": ["node_modules"]
+	"exclude": ["node_modules", "svgs"]
 }
