--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@pkyad/uilib1",
-	"version": "5.1.0",
+	"version": "5.3.0",
 	"license": "MIT",
 	"publishConfig": {
 		"registry": "https://npm.pkg.github.com/pkyad"
@@ -23,7 +23,7 @@
 		"dist"
 	],
 	"scripts": {
-		"build": "NODE_ENV=production rollup -c",
+		"build": "NODE_ENV=production rollup -c;mv dist/cjs/index.css dist/index.css",
 		"changeset": "changeset",
 		"gen-changelog": "changeset version",
 		"lint": "eslint . --ext .ts,.tsx,.js,.jsx",
@@ -35,7 +35,7 @@
 		"commitlint": "commitlint --edit",
 		"storybook": "storybook dev -p 6006",
 		"build-storybook": "storybook build",
-		"gen-icons": "rimraf src/icons && npx @svgr/cli -d src/icons src/svgs --icon --typescript --jsx-runtime 'automatic' --template src/svgs/template.ts",
+		"gen-icons": "rimraf src/icons && npx @svgr/cli -d src/icons src/svgs/assets --icon --typescript --jsx-runtime 'automatic'",
 		"script1": "tsx scripts/main.ts"
 	},
 	"lint-staged": {
