--- a/package.json
+++ b/package.json
@@ -54,11 +54,10 @@
 		"not ie 11",
 		"not op_mini all"
 	],
-	"dependencies": {
-		"@babel/runtime": "^7.20.7",
-		"tsconfig-paths-webpack-plugin": "^4.0.1"
-	},
+	"dependencies": {},
 	"devDependencies": {
+		"@babel/runtime": "^7.20.7",
+		"tsconfig-paths-webpack-plugin": "^4.0.1",
 		"@babel/core": "^7.20.12",
 		"@babel/plugin-transform-runtime": "^7.19.6",
 		"@babel/preset-env": "^7.21.5",
